k8s/router.yml
---
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: webpage
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: router
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router
  namespace: webpage
  labels:
    app: router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      restartPolicy: Always
      containers:
        - name: router
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 1
            periodSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
          volumeMounts:
            - name: conf-file
              subPath: nginx.conf
              mountPath: /etc/nginx/nginx.conf
      volumes:
        - name: conf-file
          configMap:
            name: router-config
---
