k8s/do-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webpage-ingress
  namespace: webpage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - keithmackay.com
        - api.keithmackay.com
        - go-api.keithmackay.com
        - keith.mackay.codes
        - keith.mackay.rocks
        - old.keithmackay.com
        - keithm.io
        - go.keithm.io
        # - ns.keithm.io
      secretName: cert-secret
  rules:
    - host: keith.mackay.codes
      http:
        paths:
          - backend:
              serviceName: webpage-service
              servicePort: 8080
    - host: keith.mackay.rocks
      http:
        paths:
          - backend:
              serviceName: webpage-service
              servicePort: 8080
    - host: keithm.io
      http:
        paths:
          - backend:
              serviceName: webpage-service
              servicePort: 8080
    - host: keithmackay.com
      http:
        paths:
          - backend:
              serviceName: webpage-service
              servicePort: 8080
    - host: api.keithmackay.com
      http:
        paths:
          - backend:
              serviceName: api-service
              servicePort: 8080
    - host: go.keithm.io
      http:
        paths:
          - backend:
              serviceName: go-api-service
              servicePort: 8080
    - host: go-api.keithmackay.com
      http:
        paths:
          - backend:
              serviceName: go-api-service
              servicePort: 8080
    - host: old.keithmackay.com
      http:
        paths:
          - backend:
              serviceName: old-webpage-service
              servicePort: 8080
